--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -3,7 +3,14 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/web
 jdbc.username=web
 jdbc.password=web
-
 #连接
 initSize=50
 maxSize=300
+
+
+#mongodb 配置
+mongo.ip=10.10.12.17
+mongo.port=27017
+mongo.username=spider
+mongo.password=spider
+mongo.dbname=spider
