--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG,CONSOLE,Default_Log
+log4j.rootLogger=DEBUG,CONSOLE,Default_Log,mongodb
 
 log4j.addivity.org.apache=true  
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender   
@@ -17,7 +17,19 @@ log4j.appender.Default_Log.File=D\:/weblogs/SimpleWeb/defaultlog.txt
 log4j.appender.Default_Log.DatePattern='.'yyyy-MM-dd
 log4j.appender.Default_Log.layout=org.apache.log4j.PatternLayout
 log4j.appender.Default_Log.layout.ConversionPattern=[%-5p][%d{yyyy-MM-dd HH:mm:ss}][%l] - %m%n
-log4j.appender.Config_Log.encoding=UTF-8
+log4j.appender.Default_Log.encoding=UTF-8
+
+#################################################
+## Mongo_Log 
+#################################################
+log4j.logger.org.springframework.data.mongodb.core=DEBUG, mongodb
+log4j.appender.mongodb=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.mongodb.Append=true  
+log4j.appender.mongodb.File=D\:/weblogs/SimpleWeb/mongolog.txt
+log4j.appender.mongodb.DatePattern='.'yyyy-MM-dd
+log4j.appender.mongodb.layout=org.apache.log4j.PatternLayout
+log4j.appender.mongodb.layout.ConversionPattern=[%-5p][%d{yyyy-MM-dd HH:mm:ss}][%l] - %m%n
+log4j.appender.mongodb.encoding=UTF-8
 
 #################################################
 ## Config_Log 
