--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,19 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.2.2</version>
 		</dependency>
+		
+		<!-- mongoDB支持jar -->  
+        <dependency>  
+            <groupId>org.springframework.data</groupId>  
+            <artifactId>spring-data-mongodb</artifactId>  
+            <version>2.0.1.RELEASE</version>  
+        </dependency>  
+        
+        <dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.2.2</version>
+		</dependency>
 
 		<!-- 添加分布插件的包pagehelper -->
 		<dependency>
