--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 		<file.encoding>UTF-8</file.encoding>
 		<spring.version>5.0.1.RELEASE</spring.version>
 		<mongo.version>2.0.1.RELEASE</mongo.version>
+		<log4j2.version>2.9.1</log4j2.version>
+		<jackson.version>2.9.2</jackson.version>
 	</properties>
 
 	<dependencies>
@@ -24,17 +26,17 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>2.9.1</version>
+			<version>${log4j2.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.9.1</version>
+			<version>${log4j2.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-web</artifactId>
-			<version>2.9.1</version>
+			<version>${log4j2.version}</version>
 		</dependency>
 
 		<!-- spring jar -->
@@ -164,17 +166,17 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.2</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.9.2</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.9.2</version>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<!-- druid -->
